Update: dependencies and minor refactor